syntax = "proto2";
package order.event;

option java_multiple_files = true;
option java_package = "eu.cymo.kafkaSerializationEvolution.order.event";


message OrderDelivered{
  required string delivery_partner = 1;
}