syntax = "proto2";
package order.event.individual;

import "order/id/Order.proto";

option java_multiple_files = true;
option java_package = "eu.cymo.kafkaSerializationEvolution.order.event.sd";


message OrderShipped{
  required uint64 timestamp = 1;
  required order.id.Order order = 2;
  required string delivery_partner = 3;
}